Move reused icons to own folder; new SVG logos/logotypes and icons

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -89,6 +89,10 @@
 <img width="315px" src="./press/press-kit/img/logotype_yellow.svg">
 <br/><a href="./press/press-kit/img/logotype_yellow.svg" target="_blank">SVG</a>
 
+<h5>Logo - Floflis 19</h5>
+<img width="315px" src="./press/press-kit/img/OSlogotype.png">
+<br/><a href="./press/press-kit/img/OSlogotype.png" target="_blank">PNG</a>
+
 <h3>Floflis Icons/Logos</h3>
 
 <h4>Platform</h4>
@@ -111,10 +115,6 @@
 <img width="256px" src="./os/logo_flat_white.svg">
 <br/><a href="./os/logo_flat_white.svg" target="_blank">SVG</a>
 
-
-
-
-
 <h5>Icon - colored</h5>
 <img width="315px" src="./press/press-kit/img/icon_colored.svg">
 <br/><a href="./press/press-kit/img/icon_colored.svg" target="_blank">SVG</a>
@@ -135,11 +135,15 @@
 <img width="315px" src="./press/press-kit/img/icon_yellow-lined.svg">
 <br/><a href="./press/press-kit/img/icon_yellow-lined.svg" target="_blank">SVG</a>
 
+<!--<h5>Icon - plain</h5>
+<img width="315px" src="./press/press-kit/img/floflis 20/logo plain.png">
+<br/><a href="./press/press-kit/img/floflis 20/logo plain.png" target="_blank">PNG</a>-->
+
 <h3>Screenshots</h3>
 
 <h4>Screenshot</h4>
-<img width="315px" src="./press/press-kit/img/welcome.png">
-<br/><a href="./press/press-kit/img/welcome.png" target="_blank">PNG</a>
+<img width="315px" src="./press/press-kit/img/reused/welcome.png">
+<br/><a href="./press/press-kit/img/reused/welcome.png" target="_blank">PNG</a>
 
 <h4>Screenshot Central</h4>
 <img width="315px" src="./press/press-kit/img/screenshot.png">
@@ -159,34 +163,46 @@
 <img width="315px" src="./img/web3.png">
 <br/><a href="./img/web3.png" target="_blank">PNG</a>
 
+<!--<h4>Background</h4>
+<img width="315px" src="./press/press-kit/img/floflis 20/bg.png">
+<br/><a href="./press/press-kit/img/floflis 20/bg.png" target="_blank">PNG</a>
+
+<h4>Lockscreen Background</h4>
+<img width="315px" src="./press/press-kit/img/floflis 20/lockscreen.png">
+<br/><a href="./press/press-kit/img/floflis 20/lockscreen.png" target="_blank">PNG</a>-->
+
 <h3>Additional Icons</h3>
 
 <h4>Icon Central</h4>
 <img width="256px" src="./press/press-kit/img/central.png">
 <br/><a href="./press/press-kit/img/central.png" target="_blank">PNG</a>
 
+<h4>Icon FLO ERC-20 token</h4>
+<img width="256px" src="./press/press-kit/img/token.png">
+<br/><a href="./press/press-kit/img/token.png" target="_blank">PNG</a>
+
 <h4>Icon Installer</h4>
 <p>Based off Ubuntu's Yaru icon for Ubiquity</p>
-<img width="256px" src="./press/press-kit/img/installer.png">
-<br/><a href="./press/press-kit/img/installer.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/installer.png">
+<br/><a href="./press/press-kit/img/reused/installer.png" target="_blank">PNG</a>
 
 <h4>Icon UniStore</h4>
 <img width="256px" src="./press/press-kit/img/unistore.png">
 <br/><a href="./press/press-kit/img/unistore.png" target="_blank">PNG</a>
 
 <h4>Icon Witchcraft</h4>
-<img width="256px" src="./press/press-kit/img/witchcraft.png">
-<br/><a href="./press/press-kit/img/witchcraft.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/witchcraft.png">
+<br/><a href="./press/press-kit/img/reused/witchcraft.png" target="_blank">PNG</a>
 
 <h4>Icon Folder</h4>
 <p>Based off Ubuntu's Yaru icon for folders</p>
-<img width="256px" src="./press/press-kit/img/folder.png">
-<br/><a href="./press/press-kit/img/folder.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/folder.png">
+<br/><a href="./press/press-kit/img/reused/folder.png" target="_blank">PNG</a>
 
 <h4>Icon Calculator</h4>
 <p>Based off an Ubuntu's Yaru icon</p>
-<img width="256px" src="./press/press-kit/img/calculator.png">
-<br/><a href="./press/press-kit/img/calculator.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/calculator.png">
+<br/><a href="./press/press-kit/img/reused/calculator.png" target="_blank">PNG</a>
 
 <h4>Icon Color Picker</h4>
 <img width="256px" src="./press/press-kit/img/colorpicker.png">
@@ -194,33 +210,89 @@
 
 <h4>Icon OBS Studio</h4>
 <p>The OBS branding/products doesn't pertains to Floflis; we just made our own custom icon (the symbol isn't made by us; its made by OBS Studio).</p>
-<img width="256px" src="./press/press-kit/img/obs.png">
-<br/><a href="./press/press-kit/img/obs.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/obs.png">
+<br/><a href="./press/press-kit/img/reused/obs.png" target="_blank">PNG</a>
+
+<h4>Icon Almanah</h4>
+<p>The Almanah branding/products doesn't pertains to Floflis; we just made our own custom icon (the template isn't made by us; its made by Almanah and by Ubuntu's Yaru icons).</p>
+<img width="256px" src="./press/press-kit/img/reused/almanah.png">
+<br/><a href="./press/press-kit/img/reused/almanah.png" target="_blank">PNG</a>
 
 <h4>Icon Cryptovoxels</h4>
 <p>The Cryptovoxels branding/products doesn't pertains to Floflis; we just made our own custom icon (the drawing isn't made by us; its made by Cryptovoxels).</p>
-<img width="256px" src="./press/press-kit/img/cryptovoxels.png">
-<br/><a href="./press/press-kit/img/cryptovoxels.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/cryptovoxels.png">
+<br/><a href="./press/press-kit/img/reused/cryptovoxels.png" target="_blank">PNG</a>
 
 <h4>Icon Imagemagick</h4>
 <p>The Imagemagick program doesn't pertains to Floflis; we just made our own custom icon (the drawing isn't made by us; its a public-domain clipart).</p>
-<img width="256px" src="./press/press-kit/img/imagemagick.png">
-<br/><a href="./press/press-kit/img/imagemagick.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/imagemagick.png">
+<br/><a href="./press/press-kit/img/reused/imagemagick.png" target="_blank">PNG</a>
 
 <h4>Icon Uniswap</h4>
 <p>The Uniswap branding/products doesn't pertains to Floflis; we just made our own custom icon (the drawing isn't made by us; its made by the Uniswap DAO).</p>
-<img width="256px" src="./press/press-kit/img/uniswap.png">
-<br/><a href="./press/press-kit/img/uniswap.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/uniswap.png">
+<br/><a href="./press/press-kit/img/reused/uniswap.png" target="_blank">PNG</a>
 
 <h4>Icon Hop Protocol</h4>
 <p>The Hop branding/products doesn't pertains to Floflis; we just made our own custom icon (the symbol isn't made by us; its made by the Hop Protocol).</p>
-<img width="256px" src="./press/press-kit/img/hop.png">
-<br/><a href="./press/press-kit/img/hop.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/hop.png">
+<br/><a href="./press/press-kit/img/reused/hop.png" target="_blank">PNG</a>
 
 <h4>Icon Explorer</h4>
 <p>Based off Ubuntu's Yaru icon for folders</p>
-<img width="256px" src="./press/press-kit/img/explorer.png">
-<br/><a href="./press/press-kit/img/explorer.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/explorer.png">
+<br/><a href="./press/press-kit/img/reused/explorer.png" target="_blank">PNG</a>
+
+<h4>Icon Alertz</h4>
+<img width="256px" src="./press/press-kit/img/alertz.png">
+<br/><a href="./press/press-kit/img/alertz.png" target="_blank">PNG</a>
+
+<h4>Icon (Personal) Issues Editor</h4>
+<img width="256px" src="./press/press-kit/img/issuedit.png">
+<br/><a href="./press/press-kit/img/issuedit.png" target="_blank">PNG</a>
+
+<h4>Icon Eventlr</h4>
+<h5>Big icon</h5>
+<img width="256px" src="./press/press-kit/img/eventlr.png">
+<br/><a href="./press/press-kit/img/eventlr.png" target="_blank">PNG</a>
+<h5>Small icon</h5>
+<img width="256px" src="./press/press-kit/img/eventlr_smaller.png">
+<br/><a href="./press/press-kit/img/eventlr_smaller.png" target="_blank">PNG</a>
+
+<h4>Icon .nu files</h4>
+<p>Based off Ubuntu's Yaru icon for bash files</p>
+<img width="256px" src="./press/press-kit/img/reused/application-x-nu.png">
+<br/><a href="./press/press-kit/img/reused/application-x-nu.png" target="_blank">PNG</a>
+
+<h4>Icon .apps files</h4>
+<img width="256px" src="./press/press-kit/img/reused/application-x-apps.png">
+<br/><a href="./press/press-kit/img/reused/application-x-apps.png" target="_blank">PNG</a>
+
+<h4>Icon .game files</h4>
+<img width="256px" src="./press/press-kit/img/reused/application-x-game.png">
+<br/><a href="./press/press-kit/img/reused/application-x-game.png" target="_blank">PNG</a>
+
+<h4>Icon .html5 files</h4>
+<img width="256px" src="./press/press-kit/img/reused/application-x-html5.png">
+<br/><a href="./press/press-kit/img/reused/application-x-html5.png" target="_blank">PNG</a>
+
+<h3>Other/misc</h3>
+
+<h4>Icon David Explorer</h4>
+<img width="256px" src="./press/press-kit/img/davidexplorer.png">
+<br/><a href="./press/press-kit/img/davidexplorer.png" target="_blank">PNG</a>
+
+<h4>Icon David Writer</h4>
+<img width="256px" src="./press/press-kit/img/davidtext.png">
+<br/><a href="./press/press-kit/img/davidtext.png" target="_blank">PNG</a>
+
+<h4>Social avatar</h4>
+<img width="256px" src="./press/press-kit/img/Floflis avatar.png">
+<br/><a href="./press/press-kit/img/Floflis avatar.png" target="_blank">PNG</a>
+
+<h4>Icon Floflis for <a href="https://c2.frameworkjs.eth.link/" target="_blank">Construct 2</a></h4>
+<img width="96px" src="./press/press-kit/img/Floflis C2.png">
+<br/><a href="./press/press-kit/img/Floflis C2.png" target="_blank">PNG</a>
 
 <br/>
 <hr/>
@@ -267,7 +339,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sun Dec 30 20:15:00 2021 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Tue Mar 22 14:14 2022 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
