--- a/index.html
+++ b/index.html
@@ -43,26 +43,31 @@
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h2></h2><h3></h3>
+<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>The edge of modern computing.</h1><h3></h3>
+<hr/>
 
 <h2>Rust everywhere 🦀</h2>
 <h3>Rust from the shell to the prompt; from the prompt to the programs.</h3>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/50749515?s=200&v=4"> <b>Shell</b></h2>
 <p>Floflis have replaced Bash by a modern and faster shell: <a href="https://github.com/nushell/nushell" target="_blank">nu</a>.</p>
 <p>But <b>don't worry</b>: your loved bash scripts will still work!</p>
-<img width="840px" src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete5.gif">
-
-<hr/>
-
+<img width="440px" src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete6.gif">
+    </div>
+    <div class="col">
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/49654870?s=200&v=4"> <b>Prompt 👩‍🚀</b></h2>
 <p>Floflis uses a beauty/infinitely customizable, modern and blazing-fast prompt: <a href="https://github.com/starship/starship" target="_blank">Starship 🚀</a></p>
-<img width="840px" src="https://raw.githubusercontent.com/starship/starship/master/media/demo.gif">
+<img width="440px" src="https://raw.githubusercontent.com/starship/starship/master/media/demo.gif">
+    </div>
+  </div>
+</div>
 
 <hr/>
 
-<h3>Floflis is an ecosystem which can be a standalone OS <small>(Linux or any other open kernel)</small> or run as a platform inside any other OS.</h3><h5>Lightweight or full-featured as your choice. Scalable to any device and resources. <b>Yours</b>.</h5></center>
-<hr/>
+<h5>Floflis is an ecosystem which can be a standalone OS <small>(Linux or any other open kernel)</small> or run as a platform inside any other OS:</h5></center>
 <style>
 h1.wowpaper {
 margin-bottom: 24px;
@@ -129,69 +134,61 @@ width: 82%;
 <h5>We are also considering to develop Floflis Shield, a brand new daemon for app permissions (so, shell programs could ask for permissions before performing specific tasks).</h5>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>-->
 
-<h1>OS - <small>Lightweight or full-featured OS powering your device</small></h1>
+<center><h1>OS - <small>Lightweight or full-featured OS powering your device</small></h1></center>
 
-<div class="row">
-  <div class="col-sm-6">
-
+<div class="container">
+  <div class="row">
+    <div class="col">
 <div class="card" style="width: 18rem;">
-  <img width="300px" class="card-img-top" src="./press/press-kit/img/welcome.png" alt="Card image cap">
+  <img width="288px" class="card-img-top" src="./press/press-kit/img/reused/welcome.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Floflis OS</h5>
-    <p class="card-text">The lead product of the Floflis Platform 🏅<br/><small>Currently based in <b>Ubuntu</b> (PCs, Raspberry Pi, SiFive Unmatched - or <b>RaspiOS</b> on its armhf - Raspberry Pi Zero/W - version)</small>.</p>
-    <a href="./os" class="btn btn-primary">Know Floflis OS!</a>
+    <p class="card-text">The lead product of the Floflis Platform 🏅<br/><small>Currently based on <b>Ubuntu</b> (PCs, Raspberry Pi, SiFive Unmatched - or <b>RaspiOS</b> on its armhf - Raspberry Pi Zero/W - version)</small>.</p>
+    <a href="./os" class="btn"><img width="32px" src="./press/press-kit/img/icon_colored.svg"/> Meet Floflis OS!</a>
   </div>
 </div>
-
-  </div>
-  
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="300px" class="card-img-top" src="https://ipfs.io/ipfs/QmWwMFPL2jMjCcEyYPVmCikGb4aUZBXrzZHJ2wF4f2rKGH" alt="Card image cap">
+    </div>
+    <div class="col">
+<div class="card" style="width: 21rem;">
+  <img width="336px" class="card-img-top" src="https://avatars.githubusercontent.com/u/77433541" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">UniOS</h5>
     <p class="card-text">The crossover between <a href="https://uniswap.org/" target="_blank">Uniswap</a> and <a href="./os">Floflis OS</a>.<br/>Its Floflis, but themed with Uniswap's design and philosophy.<br/><small>Currently based in Ubuntu</small>.</p>
-    <a href="" class="btn btn-primary">Know UniOS (not available yet)!</a>
+    <a target="blank_" href="https://github.com/UniOSeth" class="btn btn-primary">Meet UniOS (not available yet)!</a>
+  </div>
+</div>
+    </div>
   </div>
 </div>
 
-  </div>
+<center><h1>Guest - <small>An OS inside your OS</small></h1></center>
 
-</div>
-
-<h1>Guest - <small>A OS inside your OS</small></h1>
-
-<div class="row">
-
-  <div class="col-sm-6">
-
-<div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">CLI</h5>
-    <p class="card-text">Floflis' operating base. Even the graphical layers uses CLI.</p>
-    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns graphic desktop.</p>
-    <a href="https://floflis.github.io/cli" target="_blank" class="btn btn-primary">Access</a>
-  </div>
-</div>
-
-  </div>
-  
-  <div class="col-sm-6">
-
+<div class="container">
+  <div class="row">
+    <div class="col">
 <div class="card" style="width: 18rem;">
   <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRdGxVjpHK7piS261SakMQ5eFzoQi4D9kx7FRkLLFGq8K" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">HTML5Apps Platform</h5>
-    <p class="card-text">Fully featured web apps platform, that can bring Floflis as a graphical app to any OS.</p>
-    <p class="card-text">It is like PortableApps Platform. It can run <a href="https://github.com/Floflis/Floflis-Central" target="_blank">Floflis Central</a> and any other Electron app, but using the same runtime: so apps which had thousand megabytes will have just a few kilobytes.</p><br/><small>Yet in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
+    <p class="card-text">Fully featured web apps platform, that can bring Floflis as a graphical app to any OS <small>(Android, Windows, Linux, MacOS, etc)</small>.</p>
+    <p class="card-text">It is like PortableApps Platform; can run <a href="https://github.com/Floflis/Floflis-Central" target="_blank">Floflis Central</a> and any other Electron app, but using the same runtime: so apps which had thousand megabytes will have just a few kilobytes.</p><br/><small>Still in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
     <!--<a href="" target="blank" class="btn btn-primary">Access</a>-->
   </div>
 </div>
-
+    </div>
+    <div class="col">
+<div class="card" style="width: 18rem;">
+  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">CLI</h5>
+    <p class="card-text">Floflis' operating base. Even the graphical layers uses this CLI.</p>
+    <p class="card-text">Composed of DNA, Core and Soil layers. Further CLI layers spawns a graphic desktop.</p>
+    <p class="card-text">With Floflis DNA + layers + Cubic, a full Floflis OS .iso can be built.</p>
+    <a href="https://floflis.github.io/cli" target="_blank" class="btn btn-primary">Learn more</a>
   </div>
-  
+</div>
+    </div>
+  </div>
 </div>
 
 <!--<div class="row">
@@ -259,7 +256,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sun Dec 30 20:15:00 2021 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sun Jan 22 20:47:52 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
@@ -271,7 +268,7 @@ width: 82%;
 <a href="https://github.com/Floflis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitHub" alt="GitHub"></a>
 <a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round" style="background:#3f3d56" width="40px" height="40px"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
-<copyright><center><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2021 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>-->Plasmmer DAO. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
+<copyright><center><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2023 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>-->Plasmmer DAO. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
 </footer>
 </div>
 </div>
