--- a/os/index.html
+++ b/os/index.html
@@ -69,16 +69,29 @@
 <h2>Rust everywhere 🦀</h2>
 <h3>Rust from the shell to the prompt; from the prompt to the programs.</h3>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/50749515?s=200&v=4"> <b>Shell</b></h2>
 <p>Floflis have replaced Bash by a modern and faster shell: <a href="https://github.com/nushell/nushell" target="_blank">nu</a>.</p>
 <p>But <b>don't worry</b>: your loved bash scripts will still work!</p>
-<img width="840px" src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete5.gif">
+<img width="440px" src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete6.gif">
+    </div>
+    <div class="col">
+<h2><img width="32px" src="https://avatars.githubusercontent.com/u/49654870?s=200&v=4"> <b>Prompt 👩‍🚀</b></h2>
+<p>Floflis uses a beauty/infinitely customizable, modern and blazing-fast prompt: <a href="https://github.com/starship/starship" target="_blank">Starship 🚀</a></p>
+<img width="440px" src="https://raw.githubusercontent.com/starship/starship/master/media/demo.gif">
+    </div>
+  </div>
+</div>
 
 <hr/>
 
-<h2><img width="32px" src="https://avatars.githubusercontent.com/u/49654870?s=200&v=4"> <b>Prompt 👩‍🚀</b></h2>
-<p>Floflis uses a beauty/infinitely customizable, modern and blazing-fast prompt: <a href="https://github.com/starship/starship" target="_blank">Starship 🚀</a></p>
-<img width="840px" src="https://raw.githubusercontent.com/starship/starship/master/media/demo.gif">
+<h1>Firedoge?</h1>
+<img width="150px" src="https://github.com/zilldao/firedoge/raw/main/icon.png">
+<h2>Yes, it exist!</h2>
+<p>Very soon.</p>
+<hr/>
 
 <h1>Desktop backgrounds as NFTs? U're covered!</h1>
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are your friend okay abt you 🎯 your phone at their screen?<br><br>If true and you see an monitor with this QR code: SCAN IT!<br><br>And you&#39;ll verify they have an NFT desktop background! <a href="https://t.co/3s4YsCsTZd">pic.twitter.com/3s4YsCsTZd</a></p>&mdash; Floflis.eth (@FloflisOS) <a href="https://twitter.com/FloflisOS/status/1456870807460880384?ref_src=twsrc%5Etfw">November 6, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
@@ -91,12 +104,6 @@
 <br/>
 <br/>
 <div class="caption"><img height="601px" class="caption" style="height:601px!important" title="Personalize your PC in a beauty, intuitive screen" src="https://github.com/Floflis/Floflis-Central/raw/main/screenshot2.png"><span>Personalize your PC in a beauty, intuitive screen</span></div>
-<hr/>
-
-<h1>Firedoge?</h1>
-<img width="150px" src="https://github.com/zilldao/firedoge/raw/main/icon.png">
-<h2>Yes, it exists.</h2>
-<p>Very soon.</p>
 <hr/>
 
 <img class="rounded float-left" src="img/web3.png" width="350px"><h1 class="wowpaper selectink web3">Its for Web 3.0...</h1>
@@ -193,7 +200,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sun Dec 30 20:15:00 2021 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sun Jan 22 20:48:29 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
@@ -205,7 +212,7 @@ width: 82%;
 <a href="https://github.com/Floflis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitHub" alt="GitHub"></a>
 <a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round" style="background:#3f3d56" width="40px" height="40px"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
-<copyright><center><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2021 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>-->Plasmmer DAO. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
+<copyright><center><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2023 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>-->Plasmmer DAO. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
 </footer>
 </div>
 </div>
