Lots of updates

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     overflow: hidden!important;
 ">
 <!--<a href=""><li><div><i class="material-icons">widgets</i></div><p>Elements</p></li></a>-->
+<a href="./os"><li><!--<div><i class="material-icons">book</i></div>--><p>FloflisOS</p></li></a>
 <a href="./press"><li><!--<div><i class="material-icons">book</i></div>--><p>Press</p></li></a>
 <a href="https://floflis.github.io/blog" target="_blank"><li><!--<div><i class="material-icons">book</i></div>--><p>Blog</p></li></a>
 <!--<a href="" target="_blank"><li><div><i class="material-icons">comment</i></div><p>Forum</p></li></a>-->
@@ -216,14 +217,14 @@ width: 82%;
 <hr/>
 <img width="300px" src="img/undraw/subscriber.svg"/>
 <h1>Receive updates from Floflis</h1>
-<p>Subscribe to our <a href="https://floflis.github.io/blog/index.json" target="blank">JsonFeed</a> or <a href="https://floflis.github.io/blog/index.xml" target="blank">RSS feed</a>.</p>
+<p>Subscribe to our <a href="https://floflis.github.io/blog/index.json" target="blank">JsonFeed</a> or <a href="https://floflis.github.io/blog/index.xml" target="blank">RSS feed</a>. You can also follow us on <a href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5EFloflisOS&region=follow_link&screen_name=FloflisOS" target="_blank">Twitter</a> or other of <a href="./about/socialnetworks">our social networks</a>.</p>
 <br/>
 <hr/>
 <img width="300px" src="img/undraw/learning.svg"/> <img width="300px" src="img/undraw/candidate.svg"/>
 <h1>Your voice matters</h1>
 <p>Found bugs or wants to suggest a thing? Or to discuss anything?</p>
-<p>Send an email to: <a href="mailto:floflis@protonmail.com">daniellmesquita@protonmail.com</a>.</p>
-<p>Or open an issue on <a href="https://gitlab.com/floflis/" target="blank">GitLab</a> or <a href="https://github.com/Floflis/" target="blank">GitHub</a> at the respective repository you have a issue to report.</p>
+<p>Submit a <a href="https://github.com/Floflis/meta/issues/new/choose" target="_blank">GitHub issue here</a> or send an email to: <a href="mailto:floflis@protonmail.com">floflis@protonmail.com</a>.</p>
+<p>There's also our <a href="" target="_blank">Discord</a> and <a href="" target="_blank">Reddit</a>!</p>
 <hr/>
 <h1>To do:</h1>
 <ul>
@@ -266,7 +267,7 @@ width: 82%;
 <!--<a href="https://riot.im/app/#/+floflis:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>-->
 <!--<a href="https://matrix.to/#/#openplanetnews:matrix.org" target="blank"><img src="img/social/riot.svg" width="40px" height="40px" title="Enable notifications for our updates" alt="Riot.im" class="round"></a>-->
 <a href="https://github.com/Floflis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitHub" alt="GitHub"></a>
-<a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round" style="background:#3f3d56" width="40px" height="40px"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
+<a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round" width="40px" height="40px"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
 <copyright><center><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2023 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>-->Plasmmer DAO. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
 </footer>
