add usvpocplayer Press img and fix Floflis logo in /os/

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -518,6 +518,11 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
+<h4>USV Proof-of-Concept VideoPlayer</h4>
+<img width="256px" src="./press/press-kit/img/usvpocplayer.svg">
+<br/><a href="./press/press-kit/img/usvpocplayer.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
 <h4>Social avatar</h4>
 <img width="256px" src="./press/press-kit/img/Floflis avatar.png">
 <br/><a href="./press/press-kit/img/Floflis avatar.png" target="_blank">PNG</a>
