update Voxels (former Cryptovoxels) icon

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -323,10 +323,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h4>Icon Cryptovoxels</h4>
-<p>The Cryptovoxels branding/products doesn't pertains to Floflis; we just made our own custom icon (the drawing isn't made by us; its made by Cryptovoxels).</p>
-<img width="256px" src="./press/press-kit/img/reused/cryptovoxels.png">
-<br/><a href="./press/press-kit/img/reused/cryptovoxels.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/reused/cryptovoxels.svg" target="_blank">SVG</a>
+<h4>Icon Voxels (former Cryptovoxels)</h4>
+<p>The Voxels branding/products doesn't pertains to Floflis; we just made our own custom icon (the drawing isn't made by us; its made by Cryptovoxels).</p>
+<img width="256px" src="./press/press-kit/img/reused/voxels.png">
+<br/><a href="./press/press-kit/img/reused/voxels.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/reused/voxels.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon Imagemagick</h4>
