Use table for Floflis 'Receive updates' and 'Your voice' widgets, so they are on same line

--- a/os/index.html
+++ b/os/index.html
@@ -160,16 +160,22 @@ width: 82%;
 </style>
 
 <hr/>
+<div class="container">
+  <div class="row">
+    <div class="col">
 <img width="300px" src="img/undraw/subscriber.svg"/>
 <h1>Receive updates from Floflis</h1>
 <p>Subscribe to our <a href="https://floflis.github.io/blog/index.json" target="blank">JsonFeed</a> or <a href="https://floflis.github.io/blog/index.xml" target="blank">RSS feed</a>. You can also follow us on <a href="https://twitter.com/intent/follow?ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5EFloflisOS&region=follow_link&screen_name=FloflisOS" target="_blank">Twitter</a> or other of <a href="./about/socialnetworks">our social networks</a>.</p>
-<br/>
-<hr/>
+    </div>
+    <div class="col">
 <img width="300px" src="img/undraw/learning.svg"/> <img width="300px" src="img/undraw/candidate.svg"/>
 <h1>Your voice matters</h1>
 <p>Found bugs or wants to suggest a thing? Or to discuss anything?</p>
 <p>Submit a <a href="https://github.com/Floflis/meta/issues/new/choose" target="_blank">GitHub issue here</a> or send an email to: <a href="mailto:floflis@protonmail.com">floflis@protonmail.com</a>.</p>
 <p>There's also our <a href="" target="_blank">Discord</a> and <a href="" target="_blank">Reddit</a>!</p>
+    </div>
+  </div>
+</div>
 <hr/>
 <h1>To do:</h1>
 <ul>
@@ -202,7 +208,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 05 22:23 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 05 22:36 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
