Update /press' Schoolbag  icon and add its PNG version

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -438,7 +438,7 @@
     <div class="col-sm">
 <h4>Icon Plasmmer Schoolbag</h4>
 <img width="256px" src="./press/press-kit/img/schoolbag.svg">
-<br/><a href="./press/press-kit/img/schoolbag.svg" target="_blank">SVG</a>
+<br/><a href="./press/press-kit/img/schoolbag.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/schoolbag.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon .nu files</h4>
@@ -581,7 +581,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 05 22:42 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 05 22:52 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
