updt /os/download

--- a/os/download/index.html
+++ b/os/download/index.html
@@ -66,7 +66,7 @@ header nav ul li p{color:#fff!important}
 <article>
 <center><img class="img-fluid" width="500px" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png"/><br/><br/><img width="420px" class="img-fluid" src="./press/press-kit/img/logotype_colored.svg" title="Floflis OS" alt="Floflis OS"/><br/><h1>Download</h1>
 
-<small>Despite the "19" in the edition name, Floflis is being actively developed using current technology (such as Ubuntu 23.04 and ready for Ubuntu 24).</small>
+<small>Despite the "<b>19</b>" in the edition name, Floflis is being actively developed using current technology (such as <b>Ubuntu 23.04 Lunar Lobster</b> and ready for Ubuntu 24).</small>
 <p>Once the Floflis Insiders program is launched, you'll be able to download build ISOs/images.</p>
 <p>The first editions of Floflis to receive downloadable images are the ones for Raspberry Pi. Then, for PC (x86).</p>
 
@@ -98,7 +98,7 @@ header nav ul li p{color:#fff!important}
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 05 23:03 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 05 23:08 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
