Add Tiktok to social icons, improve Login with Plasmmer button

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -30,7 +30,7 @@
 <body id="body">
 <div id="app">
 <header><a href="././"><logo title="Floflis Platform"></logo></a>
-<a href="https://orgut.co/login?source=floflis.com" class="btn btn-primary" style="float: right;color: #fff !important;"><div style="background: url(https://web.archive.org/web/20230405192028/https://orgut.co/PF.Site/flavors/bootstrap/assets/logos/logo_default.png) no-repeat no-repeat 0px 0px;width: 32px;height: 32px;background-size: 168px;padding: 0 0px 0px 0px;/*! line-height: -7px; */vertical-align: middle;display: inline-block;"></div> Sign-in</a>
+<a title="Login with your Plasmmer account" href="https://accounts.plasmmer.com/login?redirectto=floflis.com" class="btn btn-light btn-sm" style="float: right;"><div style="background: url(https://web.archive.org/web/20230405192028/https://orgut.co/PF.Site/flavors/bootstrap/assets/logos/logo_default.png) no-repeat no-repeat 0px 0px;width: 32px;height: 32px;background-size: 168px;padding: 0 0px 0px 0px;/*! line-height: -7px; */vertical-align: middle;display: inline-block;"></div> Sign-in</a>
 <nav>
 <ul style="
     overflow: hidden!important;
@@ -581,9 +581,10 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 05 22:56 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Thu Apr 06 14:04 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
+<a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
 <a href="https://www.youtube.com/channel/UCqboYZIRwremiHzqcvBdlYg" target="blank"><img src="img/social/youtube.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
 <a href="https://discord.gg/kcnYFqp" target="blank"><img src="img/social/discord.svg" width="40px" height="40px" title="Chat with us or get support" alt="Discord" class="round"></a>
 <a href="https://www.reddit.com/r/floflis/" target="blank"><img src="img/social/reddit.svg" width="40px" height="40px" title="Yes, we have a base in the Reddit planet" alt="Reddit" class="round"></a>
