Branding improvements/fixes/changes across differentiation Platform-OS

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -54,7 +54,7 @@
   </button>
 </div>
 <article>
-<center><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Press Kit</h1><h2>Floflis logos and brand assets</h2></center>
+<center><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Press Kit</h1><h2>Floflis logos and brand assets</h2></center>
 <hr/>
 
 <h3>Floflis Logotypes</h3>
@@ -65,8 +65,8 @@
   <div class="row">
     <div class="col-sm">
 <h5>Logo Platform</h5>
-<img width="315px" src="./logotype.png">
-<br/><a href="./logotype.png" target="_blank">PNG</a>
+<img width="315px" src="./logotype.svg">
+<br/><a href="./logotype.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h5>Logo - 1-color (black)</h5>
@@ -581,7 +581,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu Apr 06 14:04 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 26 20:56 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
