--- a/about/socialnetworks/index.html
+++ b/about/socialnetworks/index.html
@@ -54,7 +54,7 @@
   </button>
 </div>
 <article>
-<center><img class="img-fluid" src="logotype.png" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Social networks</h1><h2>Stay tuned or contact us</h2></center>
+<center><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Social networks</h1><h2>Stay tuned or contact us</h2></center>
 <hr/>
 
 <p>Gather with us in:</p>
@@ -78,7 +78,7 @@
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu Apr 06 13:58 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 26 20:54 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
