--- a/os/download/index.html
+++ b/os/download/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
  <head>
-  <title color="">Floflis Platform</title>
+  <title color="">Floflis OS</title>
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta content="width=device-width,initial-scale=1,minimal-ui,shrink-to-fit=no,user-scalable=no" name="viewport">
 <base href="../../">
-  <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
-  <link rel="icon" href="icon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./os/icon.ico" type="image/x-icon">
+  <link rel="icon" href="./os/icon.ico" type="image/x-icon">
 <link rel="logo" href="flag.svg" border="true" />
 <script type="text/javascript" src="plugins/jQuery/jquery.min.js"></script>
 <script type="text/javascript" src="plugins/Popper.js/popper.min.js"></script>
@@ -64,7 +64,7 @@ header nav ul li p{color:#fff!important}
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png"/><br/><br/><img width="420px" class="img-fluid" src="./press/press-kit/img/logotype_colored.svg" title="Floflis OS" alt="Floflis OS"/><br/><h1>Download</h1>
+<center><img class="img-fluid" width="500px" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png"/><br/><br/><img width="420px" class="img-fluid" src="./press/press-kit/img/OSlogotype.svg" title="Floflis 19" alt="Floflis 19"/><br/><h1>Download</h1>
 
 <small>Despite the "<b>19</b>" in the edition name, Floflis is being actively developed using current technology (such as <b>Ubuntu 23.04 Lunar Lobster</b> and ready for Ubuntu 24).</small>
 <p>Once the Floflis Insiders program is launched, you'll be able to download build ISOs/images.</p>
@@ -98,7 +98,7 @@ header nav ul li p{color:#fff!important}
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu Apr 06 14:03 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Apr 26 20:44 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
