new banner for /OS

--- a/os/index.html
+++ b/os/index.html
@@ -65,7 +65,7 @@ header nav ul li p{color:#fff!important}
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="https://github.com/Floflis/nftmark/raw/master/screenshot.png"/><br/><br/><img width="420px" class="img-fluid" src="./press/press-kit/img/OSlogotype.svg" title="Floflis 19" alt="Floflis 19"/><br/><h2>Its to the Web 3.0 what Windows 98 was to the Web 1.0.</h2><h3>What would happen if nowadays OSes had Web3/PlayToEarn/tokens/NFTs integrated? See it on Floflis 🏐</h3>
+<center><img class="img-fluid" width="500px" src="./os/banner.png"/><br/><br/><img width="420px" class="img-fluid" src="./press/press-kit/img/OSlogotype.svg" title="Floflis 19" alt="Floflis 19"/><br/><h2>Its to the Web 3.0 what Windows 98 was to the Web 1.0.</h2><h3>What would happen if nowadays OSes had Web3/PlayToEarn/tokens/NFTs integrated? See it on Floflis 🏐</h3>
 
 <h0>But wait!</h0>
 <h1>BLA BLA BLA NFTS, BLA BLA BLA TOKENS...</h1>
@@ -208,7 +208,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 26 20:44 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat Apr 29 22:19 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
