updt OS/download

--- a/os/download/index.html
+++ b/os/download/index.html
@@ -68,10 +68,10 @@ header nav ul li p{color:#fff!important}
 
 <small>Despite the "<b>19</b>" in the edition name, Floflis is being actively developed using current technology (such as <b>Ubuntu 23.04 Lunar Lobster</b> and ready for Ubuntu 24).</small>
 <p>Once the Floflis Insiders program is launched, you'll be able to download build ISOs/images.</p>
-<p>The first editions of Floflis to receive downloadable images are the ones for Raspberry Pi. Then, for PC (x86).</p>
+<p>The first editions of Floflis to receive downloadable images are Floflis Server 2023 and the ones for Raspberry Pi. Then, for Desktop PC (x86).</p>
 
 <h4>Soon™️</h4>
-<p>Latest update in Floflis: 23/01/2023.</p>
+<p>Latest update in Floflis: 29/04/2023 -0300.</p>
 <p>Follow us on Twitter to receive the latest peeps.</p>
 <iframe id="twitter-widget-1" scrolling="no" allowtransparency="true" allowfullscreen="true" class="twitter-follow-button twitter-follow-button-rendered" style="position: static; visibility: visible; width: 182px; height: 28px;" title="Twitter Follow Button" src="https://platform.twitter.com/widgets/follow_button.3da3731af9a8a2b242ed5500485bb22f.en.html#dnt=false&amp;id=twitter-widget-1&amp;lang=en&amp;screen_name=FloflisOS&amp;show_count=false&amp;show_screen_name=true&amp;size=l&amp;time=1674487818826" data-screen-name="FloflisOS" frameborder="0"></iframe>
 <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -98,7 +98,7 @@ header nav ul li p{color:#fff!important}
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sat Apr 29 22:19 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat Apr 29 22:24 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
