--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -54,7 +54,7 @@
   </button>
 </div>
 <article>
-<center><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>Press Kit</h1><h2>Floflis logos and brand assets</h2></center>
+<center><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform" width="420px"/><br/><h1>Press Kit</h1><h2>Floflis logos and brand assets</h2></center>
 <hr/>
 
 <h3>Floflis Logotypes</h3>
@@ -193,13 +193,18 @@
   <div class="row">
     <div class="col-sm">
 <h4>Screenshot</h4>
-<img width="315px" src="./press/press-kit/img/reused/welcome.png">
-<br/><a href="./press/press-kit/img/reused/welcome.png" target="_blank">PNG</a>
+<img width="315px" src="./os/Screenshot from 2023-04-26 13-09-18.png">
+<br/><a href="./os/Screenshot from 2023-04-26 13-09-18.png" target="_blank">PNG</a>
     </div>
     <div class="col-sm">
-<h4>Screenshot Central</h4>
+<h4>Screenshot Central (outdated)</h4>
 <img width="315px" src="./press/press-kit/img/screenshot.png">
 <br/><a href="./press/press-kit/img/screenshot.png" target="_blank">PNG</a>
+    </div>
+    <div class="col-sm">
+<h4>Screenshot NFT Desktop Background (outdated)</h4>
+<img width="315px" src="./press/press-kit/img/reused/welcome.png">
+<br/><a href="./press/press-kit/img/reused/welcome.png" target="_blank">PNG</a>
     </div>
   </div>
 </div>
@@ -536,6 +541,16 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon HTML5Apps Platform</h4>
+<img width="96px" src="./press/press-kit/img/html5apps.png">
+<br/><a href="./press/press-kit/img/html5apps.png" target="_blank">PNG</a>
+    </div>
+  </div>
+</div>
+
 <br/>
 <hr/>
 
@@ -581,7 +596,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 26 20:56 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat Apr 29 22:49 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
