--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform"/><br/><h1>The edge of modern computing.</h1><h3></h3>
+<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform" width="420px"/><br/><h1>The edge of modern computing.</h1><h3></h3>
 <hr/>
 
 <h2>Rust everywhere 🦀</h2>
@@ -142,7 +142,7 @@ width: 82%;
   <div class="row">
     <div class="col">
 <div class="card" style="width: 18rem;">
-  <img width="288px" class="card-img-top" src="./press/press-kit/img/reused/welcome.png" alt="Card image cap">
+  <img width="288px" class="card-img-top" src="./os/Screenshot from 2023-04-26 13-09-18.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">Floflis OS</h5>
     <p class="card-text">The lead product of the Floflis Platform 🏅<br/><small>Currently based on <b>Ubuntu</b> (PCs, Raspberry Pi, SiFive Unmatched - or <b>RaspiOS</b> on its armhf - Raspberry Pi Zero/W - version)</small>.</p>
@@ -150,6 +150,7 @@ width: 82%;
   </div>
 </div>
     </div>
+    <!--
     <div class="col">
 <div class="card" style="width: 21rem;">
   <img width="336px" class="card-img-top" src="https://avatars.githubusercontent.com/u/77433541" alt="Card image cap">
@@ -160,6 +161,7 @@ width: 82%;
   </div>
 </div>
     </div>
+    -->
   </div>
 </div>
 
@@ -169,7 +171,7 @@ width: 82%;
   <div class="row">
     <div class="col">
 <div class="card" style="width: 18rem;">
-  <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRdGxVjpHK7piS261SakMQ5eFzoQi4D9kx7FRkLLFGq8K" alt="Card image cap">
+  <img width="100%" class="card-img-top" src="./press/press-kit/img/html5apps.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">HTML5Apps Platform</h5>
     <p class="card-text">Fully featured web apps platform, that can bring Floflis as a graphical app to any OS <small>(Android, Windows, Linux, MacOS, etc)</small>.</p>
@@ -264,7 +266,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Wed Apr 26 20:54 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat Apr 29 22:43 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
